Enable Java 21 preview features to both JIT and AOT builds