@@ -1,2 +1,8 @@
 # lysense
 TODO
+
+## Building native image
+
+```
+quarkus build --native -Dquarkus.native.additional-build-args=-J--enable-preview
+```
